--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "@supabase/ssr": "^0.8.0",
-    "@supabase/supabase-js": "^2.91.1",
+    "@supabase/supabase-js": "^2.93.3",
+    "dotenv": "^17.2.3",
     "framer-motion": "^12.29.2",
     "jspdf": "^4.0.0",
     "jspdf-autotable": "^5.0.7",
